Fix: Cover upload modal top spacing

--- a/src/app/components/profile/about-cover/about-cover.component.scss
+++ b/src/app/components/profile/about-cover/about-cover.component.scss
@@ -4,7 +4,7 @@
   width: 887px;
   height: 466px;
   background: #fff;
-  margin: 0 auto;
+  margin: 40px auto;
   border: none;
 }
 
